--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "distribution"
 version = "1.0.0"
-authors = ["Micha Vie <micha@freeiam.com>", "Superciety <hello@superciety.com>"]
+authors = ["Micha Vie <micha@freeiam.com>", "Superciety <hello@superciety.com>", "Ice <icegriffin1122@gmail.com>"]
 edition = "2018"
 publish = false
 
